# fvbe

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Makefile  README  README-QEMU-EFI  README-QEMU-EFI.md  README.md  TODO  calamares-frugalware.desktop  configure  fvbe-packages.conf  fvbe-skel.conf  gdm-custom.conf  grub-mkrescue-xorriso.conf  readme.txt  skel.conf
boot-files/: TODO  generate-layouts  grub-no-locales.cfg  grub.cfg
calamares-config/: settings.conf
calamares-config-global/: settings.conf
calamares-config-plasma/modules/: packages.conf
calamares-config/modules/: locale.conf  removeuser.conf  services.conf  welcome.conf
calamares-frugalware-branding/: branding.desc  show.qml
calamares/calamares-config-global/: settings.conf
calamares/calamares-frugalware-branding/: branding.desc  show.qml
calamares/netinstall/: README  packages.yaml
guest/: .bashrc
guest/.config/: Trolltech.conf  gtkrc  gtkrc-2.0  khotkeysrc  (+8 more)
src/: CMakeLists.txt  README  TODO  block.c  configure  dmconfig.c  finale.c  format.c  fvbe.c  fwsetup-valgrind  fwsetup.supp  greeter.c  grubconfig.c  hostconfig.c  information.c  iniparser.c  install.c  kbconfig.c  langconfig.c  layout.c  local.h  locale.c  main.c  modeconfig.c  nmconfig.c  partition.c  postconfig.c  preconfig.c  qemu-exit.c  raid.c  re2ctest.c  resolvegroups.c  rootconfig.c  rootsetup.c  scanner.re  skeleton-tool.c  skeleton.c  text.h  timeconfig.c  ui_newt.c  (+3 more)
src-new/: SConstruct  main.cpp  main.hpp  newt.cpp  newt.hpp  ui.cpp  ui.hpp  ui_newt.cpp  ui_newt.hpp
syslinux/: Makefile  fvbe.c  fvbe2.c
(+23 files in other folders)
